# rust-price-tracker

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  check_db.py  config.toml  create_tables.sql  test_validation.rs
examples/: interaction_example.rs  llm_test.rs
migrations/: 001_create_tables.sql
src/: lib.rs  main.rs
src/application/services/: mod.rs
src/application/services/crawling/: CrawlingOrchestrator.rs  crawler.rs  mod.rs
src/components/: mod.rs
src/components/Json/: json.rs
src/components/error/: crawler_error.rs  error_cl.rs  mod.rs
src/config/: mod.rs
src/domain/: product.rs
src/domain/models/: models.rs
src/infrastruction/: mod.rs
src/infrastruction/browser/: mod.rs
src/infrastruction/database/: connection.rs  mod.rs
src/infrastruction/html/: basic.rs  htmlRepository.rs  mod.rs
src/infrastruction/html/coupang/: coupangmain.rs  mod.rs
src/infrastruction/llm/: llmRepository.rs  mod.rs  response_parser.rs
src/infrastructure/: mod.rs
src/infrastructure/browser/: BrowserManager.rs  StatefulBrowserManager.rs  chromiumAdapter.rs  mod.rs  models.rs  service.rs
src/infrastructure/database/: mod.rs  models.rs  product_repository.rs  repository.rs  sqlite_url.rs
src/infrastructure/html/: basic.rs  htmlRepository.rs
src/infrastructure/html/coupang/: coupangmain.rs
src/infrastructure/llm/: llmRepository.rs  mod.rs  models.rs  service.rs
src/site/: aliexpress.json  amazon.json  coupang.json
