[package]
name = "sexy_crawling"
version = "1.0.0"
edition = "2021"
description = "🥷 Stealth E-commerce Crawler with Advanced Bot Detection Evasion"
license = "MIT"
authors = ["jixso"]
repository = "https://github.com/jixso/sexy_crawling"
keywords = ["crawler", "stealth", "ecommerce", "rust", "headless-chrome"]
categories = ["web-programming", "automation"]

[dependencies]
chromiumoxide = "0.5"
headless_chrome = "1.0"
async-trait = "0.1"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
url = "2.5"
regex = "1.11"
uuid = { version = "1.18", features = ["v4", "serde"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
rust-embed = "8.7"
tempfile = "3.21"
zip = "2.2"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15"
ort = "1.16.3"
ndarray = "0.15"
tiktoken-rs = "0.7"
once_cell = "1.19"
tracing = "0.1"

[[bin]]
name = "sexy_crawling"
path = "src/main.rs"

[[bin]]
name = "setup_db"
path = "src/bin/setup_db.rs"

[[bin]]
name = "test_fixed_crawler"
path = "src/bin/test_fixed_crawler.rs"

[[example]]
name = "llm_test"
path = "examples/llm_test.rs"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
